k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
  labels:
    app: go-app-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app-server
  template:
    metadata:
      labels:
        app: go-app-server
    spec:
      containers:
      - name: go-app-server
      image: ttl.sh/image-name
