k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-deployment
spec:
  type: NodePort
  ports:
  - port: 4444
    targetPort: 4444
  selector:
    app: go-app-server
