k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app-server
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 4444
