k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-app-service # Needs to match service name
            port:
              number: 4444
